refactor: flask 통신 수정